Fix highlighted code line spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -174,6 +174,10 @@
   color: var(--sh-identifier);
 }
 
+pre .sh__line {
+  display: inline;
+}
+
 .sh__line ::selection,
 .sh__line::selection {
   background: var(--code-selection);
